<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_post_compact"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="2dp"
    android:background="@color/post_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_subreddit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/card_post_image"
        app:layout_constraintEnd_toStartOf="@+id/card_upvote_button"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_subreddit_icon"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:cardCornerRadius="50dp"
            app:cardElevation="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/textview_post_item_subreddit"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textview_post_item_subreddit">

            <ImageView
                android:id="@+id/imageview_subreddit_icon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars"
                android:contentDescription="@string/subreddit_icon" />

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/textview_post_item_subreddit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:padding="8dp"
            android:text="@string/subreddit_name"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/card_subreddit_icon"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/textview_post_item_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center|start"
        android:padding="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        app:layout_constraintEnd_toStartOf="@+id/card_downvote_button"
        app:layout_constraintStart_toEndOf="@+id/card_post_image"
        app:layout_constraintTop_toBottomOf="@+id/layout_subreddit"
        tools:text="random textrandom textrandom textrandom textrandom textrandom textrandom textrandom textrandom textrandom textrandom textrandom textrandom textrandom textrandom textrandom textrandom text" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_post_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintVertical_bias="0"
        app:cardBackgroundColor="?colorSecondaryVariant"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/layout_subreddit">

        <ImageView
            android:id="@+id/imageview_post_item"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/post_image_or_video"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_post_item_title"
            tools:srcCompat="@tools:sample/avatars" />

    </com.google.android.material.card.MaterialCardView>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_upvote_count"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginStart="4dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/image_saved"
        app:layout_constraintStart_toEndOf="@+id/card_post_image"
        app:layout_constraintTop_toBottomOf="@+id/textview_post_item_title">


        <ImageView
            android:id="@+id/image_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_up_arrow_null"
            tools:srcCompat="@drawable/ic_up_arrow_null" />

        <TextView
            android:id="@+id/textview_post_item_score"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"

            android:gravity="center"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/image_arrow"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="321" />


        <ImageView
            android:id="@+id/image_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toEndOf="@+id/textview_post_item_score"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_comment"
            tools:srcCompat="@drawable/ic_comment" />


        <TextView
            android:id="@+id/textview_post_item_comment_count"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"

            android:gravity="center"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/image_comment"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="300" />


        <ImageView
            android:id="@+id/image_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toEndOf="@+id/textview_post_item_comment_count"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_clock"
            tools:srcCompat="@drawable/ic_clock" />

        <TextView
            android:id="@+id/textview_post_item_age"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"

            android:gravity="center"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/image_age"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="300" />


        <ImageView
            android:id="@+id/image_more_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"

            android:contentDescription="@string/more_options"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/layout_upvote_count"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@+id/textview_post_item_age"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_more">


        </ImageView>
    </androidx.constraintlayout.widget.ConstraintLayout>





    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_upvote_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/image_upvote_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/image_upvote_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_up_arrow_null"
                android:contentDescription="@string/button_to_upvote_post" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_downvote_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_upvote_button">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/image_downvote_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/image_downvote_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#C32525"
                android:padding="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_down_arrow_null"
                android:contentDescription="@string/button_to_downvote_post" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>

    <ImageView
        android:id="@+id/image_saved"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_saved_triangle"
        tools:visibility="visible"
        android:contentDescription="" />


</androidx.constraintlayout.widget.ConstraintLayout>