<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <com.google.android.material.card.MaterialCardView
            app:cardBackgroundColor="@color/item_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/button_upvote"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/image_upvote_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:paddingTop="12dp"
                        android:paddingBottom="12dp"
                        app:layout_constraintBottom_toTopOf="@+id/view_line_upvote"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_up_arrow_null"
                        app:tint="@color/menu_blue" />


                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:drawablePadding="16dp"
                        android:gravity="center_vertical"
                        android:paddingEnd="8dp"
                        android:text="@string/upvote"

                        android:textColor="@color/menu_blue"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toTopOf="@+id/view_line_upvote"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/image_upvote_button"
                        app:layout_constraintTop_toTopOf="parent" />


                    <View
                        android:id="@+id/view_line_upvote"
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:background="@color/round_view_borders"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/image_upvote_button" />

                </androidx.constraintlayout.widget.ConstraintLayout>


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/button_downvote"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/image_downvote_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:paddingTop="12dp"
                        android:paddingBottom="12dp"
                        app:layout_constraintBottom_toTopOf="@+id/view_line_downvote"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_down_arrow_null"
                        app:tint="@color/menu_blue">

                    </ImageView>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:drawablePadding="16dp"
                        android:gravity="center_vertical"
                        android:paddingEnd="8dp"
                        android:text="@string/downvote"
                        android:textColor="@color/menu_blue"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toTopOf="@+id/view_line_downvote"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/image_downvote_button"
                        app:layout_constraintTop_toTopOf="parent" />

                    <View
                        android:id="@+id/view_line_downvote"
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:background="@color/round_view_borders"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/image_downvote_button" />


                </androidx.constraintlayout.widget.ConstraintLayout>


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/button_save"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/image_save_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:paddingTop="12dp"
                        android:paddingBottom="12dp"
                        app:layout_constraintBottom_toTopOf="@+id/view_line_save"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_save"
                        app:tint="@color/menu_blue">

                    </ImageView>

                    <TextView
                        android:id="@+id/textview_save_button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:drawablePadding="16dp"
                        android:gravity="center_vertical"
                        android:paddingEnd="8dp"
                        android:text="@string/save"
                        android:textColor="@color/menu_blue"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toTopOf="@+id/view_line_save"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/image_save_button"
                        app:layout_constraintTop_toTopOf="parent" />

                    <View
                        android:id="@+id/view_line_save"
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:background="@color/round_view_borders"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/image_save_button" />


                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/button_reply"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/image_reply_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:paddingTop="12dp"
                        android:paddingBottom="12dp"
                        app:layout_constraintBottom_toTopOf="@+id/view_line_reply"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_reply"
                        app:tint="@color/menu_blue">

                    </ImageView>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:drawablePadding="16dp"
                        android:gravity="center_vertical"
                        android:paddingEnd="8dp"
                        android:text="@string/reply"
                        android:textColor="@color/menu_blue"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toTopOf="@+id/view_line_reply"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/image_reply_button"
                        app:layout_constraintTop_toTopOf="parent" />

                    <View
                        android:id="@+id/view_line_reply"
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:background="@color/round_view_borders"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/image_reply_button" />


                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/button_author"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/image_author_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:paddingTop="12dp"
                        android:paddingBottom="12dp"
                        app:layout_constraintBottom_toTopOf="@+id/view_line_user"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_user"
                        app:tint="@color/menu_blue">

                    </ImageView>

                    <TextView
                        android:id="@+id/textview_post_author"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:drawablePadding="16dp"
                        android:gravity="center_vertical"
                        android:paddingEnd="8dp"
                        android:text="User"
                        android:textColor="@color/menu_blue"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toTopOf="@+id/view_line_user"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/image_author_button"
                        app:layout_constraintTop_toTopOf="parent" />

                    <View
                        android:id="@+id/view_line_user"
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:background="@color/round_view_borders"

                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/image_author_button" />


                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/button_subreddit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/image_subreddit_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:paddingTop="12dp"
                        android:paddingBottom="12dp"
                        app:layout_constraintBottom_toTopOf="@+id/view_line_subreddit"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_temp_r"
                        app:tint="@color/menu_blue">

                    </ImageView>

                    <TextView
                        android:id="@+id/textview_post_subreddit"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:drawablePadding="16dp"
                        android:gravity="center_vertical"
                        android:paddingEnd="8dp"
                        android:text="@string/subreddit"
                        android:textColor="@color/menu_blue"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toTopOf="@+id/view_line_subreddit"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/image_subreddit_button"
                        app:layout_constraintTop_toTopOf="parent" />

                    <View
                        android:id="@+id/view_line_subreddit"
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:background="@color/round_view_borders"

                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/image_subreddit_button" />


                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/button_hide"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/image_hide_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:paddingTop="12dp"
                        android:paddingBottom="12dp"
                        app:layout_constraintBottom_toTopOf="@+id/view_line_hide"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_hidden"
                        app:tint="@color/menu_blue">

                    </ImageView>

                    <TextView

                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:drawablePadding="16dp"
                        android:gravity="center_vertical"
                        android:paddingEnd="8dp"
                        android:text="@string/hide"
                        android:textColor="@color/menu_blue"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toTopOf="@+id/view_line_hide"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/image_hide_button"
                        app:layout_constraintTop_toTopOf="parent" />

                    <View
                        android:id="@+id/view_line_hide"
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:background="@color/round_view_borders"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/image_hide_button" />


                </androidx.constraintlayout.widget.ConstraintLayout>


            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            app:cardBackgroundColor="@color/item_background"
            android:id="@+id/card_cancel_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="8dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawablePadding="16dp"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/cancel"
                android:textColor="@color/menu_blue"
                android:textSize="18sp" />


        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>


</androidx.core.widget.NestedScrollView>